temporary: bad-oauth

--- a/src/red_cards/templates/home.html
+++ b/src/red_cards/templates/home.html
@@ -16,7 +16,8 @@
 <a class="nav-link navbar-red" href="{% url 'social:begin' backend='unti' %}?next={{ request.path }}">
 {% endcomment %}
 <a class="btn btn-danger btn-lg"
-   href="{% url 'social:begin' backend='unti' %}?next=http://redcards.ap8.ru">
+{#   href="{% url 'social:begin' backend='unti' %}?next=http://redcards.ap8.ru">#}
+   href="{% url 'social:begin' backend='unti' %}">
     Войти
 </a>
 
