--- a/src/red_cards/templates/selected-form.html
+++ b/src/red_cards/templates/selected-form.html
@@ -8,42 +8,68 @@
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
     <li class="breadcrumb-item"><a href="selection-page.html">Выбор студента</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Дмитрий Иванов</li>
+    <li class="breadcrumb-item active" aria-current="page">{{ target_user.get_full_name }}</li>
   </ol>
 </nav>
 <h1 class="section-title">Укажите причину</h1>
 <div class="section-block event-block">
+
+    {% if form.errors %}
+  <div class="section-block__item">
+    <div class="row align-items-center">
+      <div class="col-md-9">
+
+            <!-- Form Errors -->
+
+        <h3>Ошибки:</h3>
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                {{ field.label }}: <strong> {{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+
+      </div>
+    </div>
+  </div>
+    {% endif %}
+
   <div class="section-block__item">
     <div class="row align-items-center">
       <div class="col-md-9">
         <div class="user-name">
-          <div class="user-name__value">Дмитрий Иванов</div><span class="user-name__id user-id">ID 12345</span>
+          <div class="user-name__value">{{ target_user.get_full_name }}</div>
+            <span class="user-name__id user-id">ID {{ target_user.leader_id }}</span>
         </div>
-        <div class="user-email">alex.rtr@gmail.com</div>
+        <div class="user-email">{{ target_user.email }}</div>
       </div>
       <div class="col-md-3">
         <div class="user-status">
           <ul class="status-indicator">
-            <li><span class="circle circle-orange"></span></li>
-            <li><span class="circle circle-orange"></span></li>
-            <li><span class="circle circle-orange"></span></li>
-            <li><span class="circle"></span></li>
-            <li><span class="circle"></span></li>
+              {% for c in issued_cards %}
+                  <li>
+                    <!--  {{ c }} -->
+                      <span class="circle circle-orange"></span>
+                  </li>
+            {% endfor %}
+                    <!--  {{ issued_cards_empty }} -->
+            {% for c in issued_cards_empty %}
+                <li><span class="circle"></span></li>
+            {% endfor %}
           </ul>
         </div>
       </div>
     </div>
   </div>
   <div class="section-block__item">
-            <!-- Form Errors -->
-    {% if form.errors %}
-        <ul class="errors">
-            {% for error in form.errors %}
-                <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    <form class="form-event" action="#" method="post">
+    <form class="form-event" action="" method="POST">
         {% csrf_token %}
 
 
@@ -77,7 +103,7 @@
       <div class="radio-button-group">
           {% for choice, choice_label in form.type.field.choices %}
             <div class="custom-control custom-radio custom-control-inline">
-              <input class="custom-control-input" id="card-{{ choice }}" name="card"
+              <input class="custom-control-input" id="card-{{ choice }}" name="type"
                      type="radio" value="{{ choice }}" />
               <label class="custom-control-label color--{{ choice }}"
                      for="card-{{ choice }}">
@@ -87,6 +113,7 @@
         {% endfor %}
 
       </div>
+        {{ form.leader_id }}
 
       <div class="form-button-group">
         <div class="form-button-group__item"><a class="btn btn-outline-primary" href="selection-page.html">Отмена</a></div>
@@ -94,7 +121,9 @@
           <button class="btn btn-primary" type="submit">Выдать карточку</button>
         </div>
       </div>
+
     </form>
+
   </div>
 </div>
 </div>
