--- a/src/red_cards/templates/home.html
+++ b/src/red_cards/templates/home.html
@@ -3,117 +3,122 @@
 
 {% block content %}
 
-{% if not user.is_authenticated %}
-    <h1 class="section-title">Красные карточки</h1>
-    <div class="event-window">
-        <img class="img" src="/static/img/logo.svg" alt="" style="width: 35%">
-<a class="btn btn-danger btn-lg"
-{#   href="{% url 'social:begin' backend='unti' %}?next=http://redcards.ap8.ru">#}
-   href="{% url 'social:begin' backend='unti' %}">
-    Войти
-</a>
-    </div>
-{% else %}
-      <h1 class="section-title">Мои инциденты</h1>
-      <div class="section-block">
+    {% if not user.is_authenticated %}
+        <h1 class="section-title">Красные карточки</h1>
+        <div class="event-window">
+            <img class="img" src="/static/img/logo.svg" alt="" style="width: 35%">
+            <a class="btn btn-danger btn-lg"
+                    {#   href="{% url 'social:begin' backend='unti' %}?next=http://redcards.ap8.ru">#}
+               href="{% url 'social:begin' backend='unti' %}">
+                Войти
+            </a>
+        </div>
+    {% else %}
+        <h1 class="section-title">Мои инциденты</h1>
+        <div class="section-block">
 
-          <div class="section-block__item">
-            <div class="row align-items-center">
-              <div class="col-md-9">
-                <div class="user-name">
-                  <div class="user-name__value">{{ request.user.get_full_name }}</div>
-                    <span class="user-name__id user-id">ID {{ request.user.leader_id }}</span>
+            <div class="section-block__item">
+                <div class="row align-items-center">
+                    <div class="col-md-9">
+                        <div class="user-name">
+                            <div class="user-name__value">{{ request.user.get_full_name }}</div>
+                            <span class="user-name__id user-id">ID {{ request.user.leader_id }}</span>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="user-status">
+                            <ul class="status-indicator">
+                                {% for c in issued_cards %}
+                                    <li>
+                                        <!--  {{ c }} -->
+                                        <span class="circle circle-orange"></span>
+                                    </li>
+                                {% endfor %}
+                                <!--  {{ issued_cards_empty }} -->
+                                {% for c in issued_cards_empty %}
+                                    <li><span class="circle"></span></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-md-3">
-                <div class="user-status">
-                  <ul class="status-indicator">
-                      {% for c in issued_cards %}
-                          <li>
-                            <!--  {{ c }} -->
-                              <span class="circle circle-orange"></span>
-                          </li>
-                    {% endfor %}
-                            <!--  {{ issued_cards_empty }} -->
-                    {% for c in issued_cards_empty %}
-                        <li><span class="circle"></span></li>
-                    {% endfor %}
-                  </ul>
-                </div>
-              </div>
             </div>
-          </div>
 
-          {% for status in statuses_bad %}
-          <div class="section-block__item">
-            <!--
+            {% for card in issued_cards %}
+                {% with status = card.current_status %}
+                    <div class="section-block__item">
+                        <!--
             CARD: {{ status.card.uuid }}
             STATUS:
                     -id:     {{ status.id }}
                     -date:   {{ status.change_dt }}
                     -name:   {{ status.name }}
             -->
-            <div class="row align-items-center">
-              <div class="col-lg-9 col-md-8">
-                <div class="user-event">
-                  <div class="user-event__status">
-                      {% if status.name == status.NAME_CONSIDERATION %}
-                        Инцидент оспорен и рассматривается модератором
-                      {% endif %}
-                  </div>
-                  <h3 class="user-event__title" style="">
-                      {{ status.card.reason }}
-                      {{ status.card.incident_dt|date:"d.m.Y" }}
-                  </h3>
-                  <div class="user-event__date">зафиксировано {{ status.incident_dt|date:"d.m.Y" }}</div>
-                  <p class="user-event__text">
-                      {{ status.card.description }}
-                  </p>
-                </div>
-                <div class="card-type">
-                  Тип:
-                  <span
-                    {% if status.card.type == status.card.TYPE_RED %}
-                          class="color--red"
-                    {% elif status.card.type == status.card.TYPE_YELLOW %}
-                          class="color--yellow"
-                    {% else %}
-                          class="color--blue"
-                    {% endif %}
-                  >{{ status.card.type_verbose }}</span>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-4">
-                <div class="event-panel">
-                {% if status.name == status.NAME_PUBLISHED %}
-                  <div class="event-panel__item">
-                      <a class="btn btn-outline-primary" href="challenge.html">Оспорить</a>
-                  </div>
-                    <div class="event-panel__item">
-                        <div class="timer">
-                          <div class="timer__title">а обжалование осталось 24 часа</div>
-                          <div class="timer__clock" id="timer1"></div>
+                        <div class="row align-items-center">
+                            <div class="col-lg-9 col-md-8">
+                                <div class="user-event">
+                                    <div class="user-event__status">
+                                        {% if status.name == status.NAME_CONSIDERATION %}
+                                            Инцидент оспорен и рассматривается модератором
+                                        {% endif %}
+                                    </div>
+                                    <h3 class="user-event__title" style="">
+                                        {{ status.card.reason }}
+                                        {{ status.card.incident_dt|date:"d.m.Y" }}
+                                    </h3>
+                                    <div class="user-event__date">
+                                        зафиксировано {{ status.incident_dt|date:"d.m.Y" }}</div>
+                                    <p class="user-event__text">
+                                        {{ status.card.description }}
+                                    </p>
+                                </div>
+                                <div class="card-type">
+                                    Тип:
+                                    <span
+                                            {% if status.card.type == status.card.TYPE_RED %}
+                                                class="color--red"
+                                            {% elif status.card.type == status.card.TYPE_YELLOW %}
+                                                class="color--yellow"
+                                            {% else %}
+                                                class="color--blue"
+                                            {% endif %}
+                                    >{{ status.card.type_verbose }}</span>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4">
+                                <div class="event-panel">
+                                    {% if status.name == status.NAME_PUBLISHED %}
+                                        <div class="event-panel__item">
+                                            <a class="btn btn-outline-primary" href="challenge.html">Оспорить</a>
+                                        </div>
+                                        <div class="event-panel__item">
+                                            <div class="timer">
+                                                <div class="timer__title">а обжалование осталось 24 часа</div>
+                                                <div class="timer__clock" id="timer1"></div>
+                                            </div>
+                                        </div>
+                                    {% endif %}
+                                    {% if status.name == status.NAME_CONSIDERATION %}
+                                        <div class="event-panel__item">
+                                            <p class="timer-out">Запрос на рассмотрении.</p>
+                                        </div>
+                                    {% endif %}
+
+                                    {% if status.card.type == status.card.TYPE_YELLOW %}
+                                        <div class="event-panel__item">
+                                            <p class="event-notice-text">При получении второй желтой карточки вы
+                                                автоматически получите красную. В ином случае желтая карточка
+                                                автоматически
+                                                деактивируется спустя 24 часа с момента ее получения</p>
+                                        </div>
+                                    {% endif %}
+
+                                </div>
+                            </div>
                         </div>
-                      </div>
-                {% endif %}
-                {% if status.name == status.NAME_CONSIDERATION %}
-                  <div class="event-panel__item">
-                        <p class="timer-out">Запрос на рассмотрении.</p>
-                      </div>
-                {% endif %}
-
-                    {% if status.card.type == status.card.TYPE_YELLOW %}
-                  <div class="event-panel__item">
-                       <p class="event-notice-text">При получении второй желтой карточки вы автоматически получите красную. В ином случае желтая карточка автоматически деактивируется спустя 24 часа с момента ее получения</p>
-                  </div>
-                    {% endif %}
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-          {% endfor %}
+                    </div>
+                {% endwith %}
+            {% endfor %}
 
 
         </div>
@@ -123,63 +128,63 @@
         <h2 class="section-subtitle">Зеленые карточки</h2>
         <div class="section-block">
 
-          <div class="section-block__item">
-            <div class="row align-items-center">
-              <div class="col-md-12">
-                <div class="user-status">
-                  <ul class="status-indicator">
+            <div class="section-block__item">
+                <div class="row align-items-center">
+                    <div class="col-md-12">
+                        <div class="user-status">
+                            <ul class="status-indicator">
 
-                      {% for c in statuses_good %}
-                          <li>
-                            <!--  {{ c }} -->
-                              <span class="circle circle-green"></span>
-                          </li>
-                    {% endfor %}
-                            <!--  {{ statuses_good_empty }} -->
-                    {% for c in statuses_good_empty %}
-                        <li>
-                        <!--  {{ c }} -->
-                            <span class="circle"></span>
-                        </li>
-                    {% endfor %}
-                  </ul>
+                                {% for c in statuses_good %}
+                                    <li>
+                                        <!--  {{ c }} -->
+                                        <span class="circle circle-green"></span>
+                                    </li>
+                                {% endfor %}
+                                <!--  {{ statuses_good_empty }} -->
+                                {% for c in statuses_good_empty %}
+                                    <li>
+                                        <!--  {{ c }} -->
+                                        <span class="circle"></span>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
 
-          {% for status in statuses_good %}
-          <div class="section-block__item">
-            <!--
+            {% for status in statuses_good %}
+                <div class="section-block__item">
+                    <!--
             CARD: {{ status.card.uuid }}
             STATUS:
                     -id:     {{ status.id }}
                     -date:   {{ status.change_dt }}
                     -name:   {{ status.name }}
             -->
-            <div class="row align-items-center">
-              <div class="col-lg-9 col-md-8">
-                <div class="user-event">
-                  <h3 class="user-event__title">
+                    <div class="row align-items-center">
+                        <div class="col-lg-9 col-md-8">
+                            <div class="user-event">
+                                <h3 class="user-event__title">
 
-                      {{ status.card.reason }}
-                      {{ status.card.incident_dt|date:"d.m.Y" }}
-                  </h3>
-                  <div class="user-event__date">зафиксировано {{ status.incident_dt|date:"d.m.Y" }}</div>
-                  <p class="user-event__text">
-                      {{ status.card.description }}
-                  </p>
+                                    {{ status.card.reason }}
+                                    {{ status.card.incident_dt|date:"d.m.Y" }}
+                                </h3>
+                                <div class="user-event__date">зафиксировано {{ status.incident_dt|date:"d.m.Y" }}</div>
+                                <p class="user-event__text">
+                                    {{ status.card.description }}
+                                </p>
+                            </div>
+                            <div class="card-type">
+                                Тип:
+                                <span class="color--green">{{ status.card.type_verbose }}</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-type">
-                  Тип:
-                  <span class="color--green">{{ status.card.type_verbose }}</span>
-                </div>
-              </div>
-            </div>
-          </div>
             {% endfor %}
 
-    {% comment %}
+            {% comment %}
           <div class="section-block__item">
             <div class="row align-items-center">
               <div class="col-lg-9 col-md-8">
@@ -204,7 +209,7 @@
     {% endcomment %}
         </div>
 
-    {% comment %}
+        {% comment %}
         <h2 class="section-subtitle">Деактивированные карточки</h2>
         <div class="section-block">
           <div class="section-block__item">
@@ -349,9 +354,9 @@
         </div>
     {% endcomment %}
 
-    {% comment %}
+        {% comment %}
         <div class="section-button align--center"><a class="btn btn-outline-primary" href="#">Показать еще</a></div>
     {% endcomment %}
-{% endif %}
+    {% endif %}
 
 {% endblock %}
