--- a/src/red_cards/templates/home.html
+++ b/src/red_cards/templates/home.html
@@ -92,7 +92,7 @@
                   </div>
                     <div class="event-panel__item">
                         <div class="timer">
-                          <div class="timer__title">а обжалование осталось 24 часа</div>
+                          <div class="timer__title">на обжалование осталось 24 часа</div>
                           <div class="timer__clock" id="timer1"></div>
                         </div>
                       </div>
